# json_logger

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md  search-index.js
examples/: no_macros.rs  stderr.rs  stdout.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
implementors/log/: trait.Log.js
implementors/std/error/: trait.Error.js
json_logger/: fn.init.html  index.html  sidebar-items.js  struct.JsonLogger.html
src/: hostname.rs  lib.rs  macros.rs
src/json_logger/: lib.rs.html
tests/: tests.rs
