[package]
name = "json_logger"
version = "0.0.1"
authors = ["Ray Solomon <raybsolomon@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsolomo/json_logger"
homepage = "https://github.com/rsolomo/json_logger"
documentation = "http://rsolomo.github.io/json_logger/json_logger/index.html"
description = """
A JSON logging implementation.
"""

[dependencies]
libc = "0.2"
log = "0.3"
rustc-serialize = "0.3"
time = "0.1"
