[package]
name = "json_logger"
version = "0.0.2"
authors = ["Ray Solomon <raybsolomon@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsolomo/json_logger"
homepage = "https://github.com/rsolomo/json_logger"
documentation = "https://docs.rs/json_logger/0.0.2/json_logger/"
description = """
A JSON logging implementation.
"""

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
time = "0.1"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.5", features = ["winsock2"] }